k8s-workshop/ingress/ingress-basic-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
  namespace: xiaomo
  annotations:
    nginx.ingress.kubernetes.io.auth-type: basic
    nginx.ingress.kubernetes.io.auth-secret: basic-auth
    nginx.ingress.kubernetes.io.auth-realm: 'Authorization Required - foo'

spec:
  tls:
    - hosts:
        - k8s.xiaomo.info
    - secretName: tls-secret
  rules:
    - host: k8s.xiaomo.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
